# ili2c

./: .gitignore  README.md  pytest.ini
.github/workflows/: ili2c.yaml  python-package.yml
grammars-antlr4/: Interlis24Lexer.g4  Interlis24Lexer.tokens  Interlis24Parser.g4
pyili2c/metamodel/: model.py
pyili2c/parser/: __init__.py
python/: DEVELOPMENT.md  README.md  pyproject.toml  setup.cfg
python/ili2c/: __init__.py
python/ili2c/dataclasses/: README.md  generator.py  ilismeta16.py
python/ili2c/dataclasses/examples/: __init__.py  sqlalchemy_example.py  ui_scaffolding_example.py
python/ili2c/ilirepository/: cache.py  manager.py  repository.py
python/ili2c/pyili2c/: __init__.py  mermaid.py  metamodel.py
python/ili2c/pyili2c/_vendor/: __init__.py
python/ili2c/pyili2c/parser/: __init__.py  core.py
python/ilirepository/: cache.py  repository.py
python/licenses/: antlr4-python3-runtime-LICENSE.txt
python/pyili2c/parser/: __init__.py
python/tests/: conftest.py  test_ilismeta_dataclasses.py  test_repository_manager.py  test_sqlalchemy_example.py
python/tests/pyili2c/: test_mermaid.py  test_metamodel.py  test_parser.py
python/tests/pyili2c/data/: CoordSys.ili  GeometryCHLV95_V1.ili  RepoLinkedModel.ili  RepoModel.ili  RepoVersions_ili23.ili  RepoVersions_ili24.ili  SO_ARP_SEin_Konfiguration_20250115.ili  SO_ARP_SEin_Konfiguration_20250115_v23.ili  Text.ili  Units.ili  ili2mermaid.html  missing_import.ili  remote_bfs_main.ili  remote_main.ili  remote_main_v23.ili  remote_version23.ili  remote_version24.ili
tests/: conftest.py
