[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ili2c-python"
version = "0.1.0"
description = "Python utilities for ili2c (INTERLIS metamodel, parser, and repository helpers)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "antlr4-python3-runtime>=4.13,<4.14",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ili2c*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
